# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  03 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Hope this openssl problem can finally be done with.
  Thanks Chris for getting the libraries built and done so quickly!!!  5:)
  
  02 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Oops, very quick fix for vmware-server-console to actually unpack the new openssl lib
  (since we don't inherit the unpack of vmware.eclass).  Hopefully got it out in time...
  
  02 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Sync vmware.eclass, vmware-server and vmware-server-console with the in-tree version.
  
  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Updated eclass with the in-tree version for bug #148862.

  27 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Update vmware-server{,-console}'s dbus restrictions and bump to ensure security fix.

  27 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Sync vmware.eclass with the in-tree version due to bug #148682.

  27 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Updated vmware.eclass and vmware-mods.eclass from portage.

  22 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  We should be setting MY_P if we expect our tarball to be unpacked.  Ooops...

  22 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Manifest/digest fix.

  21 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Sync vmware.eclass with the in-tree version and fix the variables in
  vmware-workstation-tools.

  13 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Since I think the patch is probably only relevant to gcc-4.1, I've moved it
  out of the patch directory and applied it directly if the gcc version matches.
  I'm going to leave the eclass changes in place (but only in the overlay),
  since they'll probably be handy in the future...
